<resources>
    <string name="app_name">DinasPerhubungan</string>
    <string name="todo">todo</string>
    <string name="app">Catat Kenaikan Pangkat Dalam Satu Gengaman</string>
    <string name="title_menu1">Visi Misi Dinas Perhubungan</string>
    <string name="description_menu1">Tata kelola transportasi yang efektif melalui E-Government di Kabupaten Banyuwangi mendorong pertumbuhan ekonomi dan pembangunan yang berkelanjutan.</string>
    <string name="myapp">Dinas Perhubungan</string>
    <string name="description_splash">Tata Kelola Transportasi Lebih Simpel, Semua Dalam Satu Genggaman</string>
    <string name="title_menu2">Mengemudi Aman: Hindari Gangguan, Fokus pada Jalan</string>
    <string name="description_menu2">Ketika mengemudi, hindari gangguan seperti ponsel, makan, mengobrol, atau aktivitas lainnya. Prioritaskan perhatian pada jalan dan sekitarnya. Lakukan hal-hal tersebut hanya dalam keadaan darurat setelah berhenti.</string>
    <string name="let_start">Solusi Terpadu dalam Genggaman</string>
    <string name="description_menu3">"Melalui integrasi layanan dalam satu platform, pengguna dapat dengan mudah memenuhi berbagai kebutuhan mereka. Dengan sekali genggaman, aplikasi ini menjadi teman setia dalam menyelesaikan tugas sehari-hari.</string>
    <string name="start_now">Mulai</string>
    <string name="hint_email">email</string>
    <string name="alert_email_required">Email required!</string>
    <string name="alert_email_error">Invalid Email</string>
    <string name="alert_email_example_com_not_allowed">Email with @example.com domain is not allowed!</string>
    <string name="login">Login</string>
    <string name="hint_password">Password</string>
    <string name="error_password">Password must be at least 8 characters long!</string>
    <string name="masukan_nip_anda">Masukan NIP Anda</string>
    <string name="username">Username</string>
    <string name="show_password">Show Password</string>
    <string name="aplikasi_kenaikan_pangkat">Aplikasi Kenaikan Pangkat</string>
    <string name="desc_apps">Pegawai Dinas Perhubungan Kabupaten Banyuwangi</string>
    <string name="daftar">Blum mempunyai akun?</string>
    <string name="tv_daftar">Daftar</string>
    <string name="des_regis">Buat Akunmu - untuk masuk ke dalam aplikasi dan Nikmati layanan kami</string>
    <string name="unggah_foto">Unggah Foto</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="bintang">*</string>
    <string name="nip">Nip</string>
    <string name="nomor_telepon_wa">Nomor Telepon/WA</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="desc_dishub">Pegawai Dinas Perhubungan Kabupaten Banyuwangi</string>
    <string name="welcom_admin">Selamat Datang Admin</string>
    <string name="desc_weldim">Dinas Perhubungan Kabupaten Banyuwangi</string>
    <string name="data_pegawai">Data Pegawai</string>
    <string name="upload_data">Upload Data</string>
    <string name="aktivitas_pengguna">Aktivitas Pengguna</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="desc_upload">Data Pegawai Dinas Perhubungan Kabuoaten Banyuwangi</string>
    <string name="number">1</string>
    <string name="dot">.</string>
    <string name="name">Mohamad Aji Hermansya</string>
    <string name="jabatan">Jabatan</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="_628">628</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nips">3510162302030001</string>
    <string name="jabatan_user">Kepala Bidang Penelitian</string>
    <string name="desc_info_one">Menyelenggarakan pengkajiaan bahan kebijakan di bidang fasilitasi, koordinasi, pembinaan dan keselamatan di bidang kebandarudaraan dan pelabuhan.</string>
    <string name="desc_info_two">Pengendalian lalu lintas dengan menyelaraskan waktu lampu merah pada jaringan jalan raya di Kabupaten Banyuwangi. Area traffic control sistem (atcs) Kabupaten Banyuwangi telah di dukung dengan pantauan kamera cctv dan akan terus dimaksimalkan oleh Dinas Perhubungan Kabupaten Banyuwangi.</string>
    <string name="desc_info_tree">Serangkaian kegiatan menguji dan/atau memeriksa bagian-bagian kendaraan bermotor: kereta gandengan, kereta tempelan dan kendaraan khusus dalam rangka pemenuhan terhadap persyaratan teknis dan layak jalan.</string>
    <string name="desc_info_four">Menyediakan sarana dan prasarana penerangan lampu jalan, yang digunakan untuk penerangan jalan dimalam hari sehingga mempermudah pejalan kaki, pesepeda dan pengendara. diharapkan meningkatkan keselamatan lalu lintas dan keamanan.</string>
    <string name="desc_info_five">Perencanaan, pengadaan, pemasangan, pengaturan dan pemeliharaan fasilitas perlengkapan jalan. Dalam rangka mewujudkan, mendukung dan memelihara keamanan, keselamatan, ketertiban, dan kelancaran lalu lintas.</string>
    <string name="desc_info_six">Lalu lintas dan angkutan jalan (LLAJ). Satu kesatuan sistem yang terdisi atas lalu lintas, angkutan jalan, jaringan lalu lintas dan angkutan jalan, prasarana lalu lintas dan angkutan jalan, kendaraan, pengemudi, pengguna jalan, serta pengelolaannya.</string>
    <string name="My">Profile</string>
    <string name="hai">Hai,</string>
    <string name="email">ajihermansya14@gmail.com</string>
    <string name="keluar">Keluar</string>
    <string name="akun_saya">Akun Saya</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="ganti_bahasa">Ganti Bahasa</string>
    <string name="ketentuan_dan_privasi">Ketentuan dan Privasi</string>
    <string name="informasi_kenaikan_pangkat">Informasi Kenaikan Pangkat</string>
    <string name="notifikasi_informasi">Maaf, tidak ada informasi saat ini!</string>
    <string name="kebijakan">Kebijakan Privasi</string>
    <string name="about_app"><![CDATA[Syarat & Ketentuan Penggunaan Aplikasi]]></string>
    <string name="text_one">Penerimaan Syarat dan Ketentuan Dengan mengakses atau menggunakan aplikasi Pengeingat Kenaikan Pangkat, Anda setuju untuk tunduk pada syarat dan ketentuan berikut. Jika Anda tidak setuju dengan syarat dan ketentuan ini, Anda tidak diperkenankan untuk menggunakan aplikasi ini.</string>
    <string name="pengumpulan_informasi">1. Penggunaan Aplikasi</string>
    <string name="desc_informasi">- Anda harus berusia minimal 18 tahun atau mencapai usia yang sah sesuai dengan hukum yang berlaku di wilayah Anda untuk menggunakan aplikasi ini.\n- Anda bertanggung jawab atas semua aktivitas yang terjadi dalam akun Anda.\n- Anda setuju untuk memberikan informasi pribadi yang akurat dan terkini saat membuat akun dan menggunakannya.\n- Anda tidak diperkenankan menggunakan aplikasi ini untuk tujuan ilegal atau melanggar hukum.</string>
    <string name="pengguna_informasi">2. Privasi</string>
    <string name="desc_pengguna">Kami menghormati privasi Anda. Informasi pribadi yang Anda berikan akan dikelola sesuai dengan Kebijakan Privasi kami</string>
    <string name="keaman_data">3. Pemberitahuan dan Perubahan</string>
    <string name="desc_data">Kami berhak untuk mengubah syarat dan ketentuan ini kapan saja tanpa pemberitahuan sebelumnya. Perubahan akan berlaku segera setelah dipublikasikan di aplikasi. Terus menggunakan aplikasi ini setelah perubahan berarti Anda menerima perubahan tersebut.</string>
    <string name="pemabaruan">4. Hak Kekayaan Intelektual</string>
    <string name="desc_pemebaruan">Semua hak kekayaan intelektual terkait dengan aplikasi ini, termasuk hak cipta dan merek dagang, tetap menjadi milik kami.</string>
    <string name="desc_kontak">Jika Anda memiliki pertanyaan atau kekhawatiran tentang kebijakan privasi kami atau penggunaan Aplikasi \"Pengigat Kenaikan Pangkat\", jangan ragu untuk menghubungi kami melalui alamat email yang tersedia di aplikasi.\n\nDengan menggunakan Aplikasi \"Pengigat Kenaikan Pangkat\", Anda menyetujui dan memahami ketentuan serta kebijakan privasi yang telah dijelaskan di atas. Kami berharap aplikasi ini dapat memberikan manfaat yang besar dalam memantau informasi tanggal kenaikan pangkat dan membantu meningkatkan elatabilitas yang teapat.\n\nTerima kasih telah memilih dan menggunakan Aplikasi \"Dinas Perhungan Kabupaten Banyuwangi\" untuk mendukung pengingat jadwal Anda.</string>
    <string name="kontak_kami">5. KOntak Kami</string>
    <string name="emails">mahesajabbar02@gmail.com</string>
    <string name="empty_apps">Tidak ada aplikasi email yang tersedia!</string>
    <string name="subject_email">Ketentuan Kebijakan Privasi</string>
    <string name="isi_pesan">Kepada Tim Pengingat Jadwal Kenaikan Pangkat Dinas Perhubungan Banyuwangi,\n\nSalam sejahtera,\n\nSaya adalah pengguna setia layanan Pengingat Jadwal Kenaikan Pangkat Dinas Perhubungan Banyuwangi dan saya ingin mengetahui lebih lanjut tentang kebijakan dan privasi yang diterapkan dalam penggunaan layanan ini.\n\nApakah Anda bisa memberikan detail terkait bagaimana layanan Pengingat Jadwal Kenaikan Pangkat Dinas Perhubungan Banyuwangi mengelola data pribadi pengguna? Saya sangat menghargai privasi saya dan ingin memastikan bahwa informasi yang saya berikan saat menggunakan layanan ini diperlakukan dengan aman dan sesuai dengan standar keamanan yang relevan.\n\nJika memungkinkan, saya juga ingin meminta salinan lengkap dari kebijakan privasi yang Anda terapkan. Informasi ini akan membantu saya untuk lebih memahami bagaimana data saya diperlakukan dan disimpan oleh layanan Pengingat Jadwal Kenaikan Pangkat Dinas Perhubungan Banyuwangi.\n\nTerima kasih atas perhatian dan waktu yang Anda berikan untuk menjawab pertanyaan saya. Saya sangat menghargai transparansi dan komitmen Anda dalam menjaga keamanan informasi pengguna.\n\nDengan hormat,\n\n[Nama Anda]\n[Informasi Kontak Anda]</string>
    <string name="normal">Ketua Bidang Riset dan Penelitian</string>
    <string name="book">Data Pegawai</string>
    <string name="biodata">Biodata</string>
    <string name="detail_biodata">Detail Biodata</string>
    <string name="nama">Nama :</string>
    <string name="nip_tikwa">Nip :</string>
    <string name="number_nip">362155401145</string>
    <string name="jabatan_detail">Jabatan :</string>
    <string name="kepala_bidang_penelitian">Kepala Bidang Penelitian</string>
    <string name="pangkat_detail">Pangkat :</string>
    <string name="pembinautamamuda_iv_c">PembinaUtamaMuda(IV/c)</string>
    <string name="golongan_detail">Golongan :</string>
    <string name="tanggal_kenaikan_pangkat">Tanggal Kenaikan Pangkat :</string>
    <string name="date">10-23-2098</string>
    <string name="title">Title</string>
    <string name="default_notification_channel_id" translatable="false">YOUR_DEFAULT_CHANNEL_ID</string>


</resources>
