<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">
        <ImageView
            android:id="@+id/apps_logos"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo_apps"
            android:contentDescription="@string/todo"/>

        <TextView
            android:id="@+id/title_notif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/apps_logos"/>

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/des_regis"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:layout_below="@id/title_notif"
            android:layout_toRightOf="@id/apps_logos"/>


    </RelativeLayout>

</RelativeLayout>